# pysyphon

./: README.md  pyproject.toml  requirements.txt  setup.py
pysyphon/: __init__.py
pysyphon/mongodb/: __init__.py  abstract_collection.py  pysyphon_sub_document.py
pysyphon/postgresql/: __init__.py  abstract_table.py  dynamic_table.py  postgresql_functions.py  postgresql_types.py
