[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pysyphon"
version = "0.0.1"
dependencies = [
  "pandas>=2.1.4",
  "psycopg2-binary>=2.9.9",
]
requires-python = ">=3.11"
authors = [
  {name = "Thomas Vidori", email = "thomas.vidori@protonmail.com"},
]
readme = "README.rst"
